--- a/src/pages/instruments/04_qmr_uz.html
+++ b/src/pages/instruments/04_qmr_uz.html
@@ -15,12 +15,223 @@
         </div>
         <div class="relative w-full mt-10 pb-10 h-[calc(100vh-5.5rem)] overflow-y-auto">
 
-            <h1 class="px-5 text-xl mt-10">
-                Moddiy resurslar bo'yicha so'rovnoma
-            </h1>
-
             <form class="px-6 mt-10">
 
+                <form class="px-6 mt-10">
+                    <div class="grid grid-cols-12 border">
+                        <div class="col-span-1 bg-stone-200 p-2"></div>
+                        <div class="col-span-11 p-2">
+                            <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari</h1>
+                            <p class="pl-4 text-red-800 text-sm font-medium">Bolalar muassasi va Ixtisoslashlgan maktab-internatlar uchun so&#39;rovnoma</p>
+                        </div>
+                    </div>
+
+                    <p class="mt-4 mb-2 text-xl">KIRISH</p>
+                    <p class="mb-2">Ushbu ma&#39;lumotlarni to&#39;plashning asosiy maqsadi O&#39;zbekiston Hukumatini ota-ona qaramog&#39;idan mahrum bo&#39;lgan bolalarga
+                        institutsional g&#39;amxo&#39;rlik qilishdan oila tipidagi parvarishga o&#39;tishda qo&#39;llab-quvvatlashdan iborat. Bunga erishish uchun milliy darajada
+                        mustahkam nazorat mexanizmini qurishni maqsad qilganmiz. Batafsil ma&#39;lumotlarni to&#39;plash orqali biz oilaga asoslangan alternativalarni targ&#39;ib
+                        qiluvchi dalillarga asoslangan qarorlar va qoidalarni ishlab chiqishimiz mumkin.</p>
+                    <p class="mb-2">Yana bir muhim vazifa nogironligi boʻlgan bolalarga koʻrsatilayotgan xizmatlar sifatini oshirishdir. Ularning o&#39;ziga xos ehtiyojlari va
+                        tajribalarini tushunish orqali biz maqsadli aralashuvlarni ishlab chiqishimiz va ularning umumiy farovonligini oshirishimiz mumkin. Bundan tashqari, biz ushbu
+                        bolalar uchun etarli oilaviy turdagi vasiylik alternativalarni tadqiq qilishga va targ&#39;ib qilishga harakat qilamiz.</p>
+                    <p class="mb-2">Moddiy va moliyaviy resurslar toʻgʻrisidagi maʼlumotlar toʻplami bolalarga gʻamxoʻrlik qilish xizmatlarining umumiy sifatini oshirish maqsadida
+                        bolalarga gʻamxoʻrlik qilish muassasalari va internat maktablarining qulayliklari, resurslari va moliyaviy jihatlarini baholashni koʻzda tutadi. Oxirgi maqsad
+                        dalillarga yoʻl koʻrsatgan holda gʻamxoʻrlikka qoʻyilgan har bir bolaning farovonligi va rivojlanishini taʼ minlaydigan xavfsiz, tarbiyalash muhitini
+                        yaratishdir.</p>
+                    <p class="mb-2">MAQSAD: Ushbu vosita orqali to&#39;plangan ma&#39;lumotlar bolalar muassasalari va Ixtisoslashlgan maktab-internatlarni ularda mavjud bo&#39;lgan
+                        moddiy resurslar va ushbu muassasalarda istiqomat qiluvchilarning yashash sharoitlari nuqtai nazaridan baholashga yordam beradi.</p>
+                    <p class="mb-2">To&#39;ldirish tartibi: Ushbu so&#39;rovnoma tadqiqot vaqtida (2024 yil 1 yanvar) faoliyat yuritayotgan har bir muassasa uchun alohida
+                        to&#39;ldirilishi kerak.</p>
+                    <p class="mb-2">Ma&#39;lumot manbai: muassasa hujjatlari</p>
+                    <p class="mb-2">To&#39;ldirish uchun mas&#39;ul: muassasa rahbari, muvofiqlashtiruvchi yoki ular tomonidan vakolat berilgan shaxs</p>
+                    <p class="mb-2">Taxminan o&#39;rtacha bajarish vaqti: 90 daqiqa</p>
+
+                    <div class="grid grid-cols-2 gap-4 items-center mt-12">
+                        <div>Q1. So&#39;rovnomani to&#39;ldirish sanasi</div>
+                        <div>
+                            <input type="text" id="q1" name="q1"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>Q2. Anketani to&#39;ldirgan shaxsning ismi, otasining ismi va familiyasi</div>
+                        <div>
+                            <input type="text" id="q2" name="q2"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>Q3. Lavozimi</div>
+                        <div>
+                            <input type="text" id="q3" name="q3"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>Q4. Kasbi</div>
+                        <div>
+                            <input type="text" id="q4" name="q4"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>Q5. Telefon</div>
+                        <div>
+                            <input type="text" id="q5" name="q5"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>Q6. Elektron manzili</div>
+                        <div>
+                            <input type="text" id="q6" name="q6"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+
+                    <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. MUASSASA HAQIDA UMUMIY MA&#39;LUMOT</h2>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I1. Ixtisoslashlgan ta&#39;lim muassasasining nomi</div>
+                        <div>
+                            <input type="text" id="i1" name="i1"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I2. Reyestrdagi muassasa kodi</div>
+                        <div>
+                            <input type="text" id="i2" name="i2"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I3. Tashkilot manzili</div>
+                        <div>
+                            <input type="text" id="i3" name="i3"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I4. Maʼmuriy-hududiy birlik kodeksi (MHOBT)</div>
+                        <div>
+                            <input type="text" id="i4" name="i4"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I4a. Viloyat</div>
+                        <div>
+                            <input type="text" id="i4a" name="i4a"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I4b. Tuman</div>
+                        <div>
+                            <input type="text" id="i4b" name="i4b"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I4c.</div>
+                        <div>
+                            <input type="text" id="i4c" name="i4c"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I4d</div>
+                        <div>
+                            <input type="text" id="i4d" name="i4d"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I9. Tashkilot turi</div>
+                        <div>
+                            <input type="text" id="i9" name="i9"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                        <div>I10. Muassasa qachon ish boshlagan? Iltimos, uning nomi yoki toifasidagi har qanday o&#39;zgarishlardan qat&#39;i nazar, yaratilgan yilini ko&#39;rsating.
+                        </div>
+                        <div>
+                            <input type="text" id="i10" name="i10"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        </div>
+                    </div>
+                    <p class="italic uppercase mt-6 text-sm mb-2">FAQAT BOLALAR MUASSASALARI UCHUN</p>
+                    <div class="grid grid-cols-2 gap-4 items-center">
+                        <div>I12a. Hisobot yilining 31-dekabr holatiga ko&#39;ra muassasada nechta bola istiqomat qiladi?</div>
+                        <div class="flex items-center gap-4">
+                            <input type="text" id="i12a" name="i12a"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                            <span>bolalar</span>
+                        </div>
+                    </div>
+                    <p class="italic uppercase mt-6 text-sm mb-2">FAQAT IXTISOSLASHLGAN MAKTAB-INTERNATLAR UCHUN</p>
+                    <div class="grid grid-cols-2 gap-4 items-center">
+                        <div>I13a. Hisobot yilining 31-dekabr holatiga ko&#39;ra maktab-internatga nechta o&#39;quvchi qabul qilingan?</div>
+                        <div class="flex items-center gap-4">
+                            <input type="text" id="i13a" name="i13a"
+                                   class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                            <span>o&#39;quvchilar</span>
+                        </div>
+                    </div>
+                    <p class="mt-4">Ulardan,</p>
+                    <div class="ml-4">
+                        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                            <div>I13b. Nechta bola maktab-internatda istiqomat qilmaydi, har kuni uyidan qaytaydi?</div>
+                            <div class="flex items-center gap-4">
+                                <input type="text" id="i13b" name="i13b"
+                                       class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                                <span>bolalar</span>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                            <div>I13c. Nechta bola maktab-internatda hafta davomida qoladilar, lekin dam olish kunlari uylariga ketadilar?</div>
+                            <div class="flex items-center gap-4">
+                                <input type="text" id="i13c" name="i13c"
+                                       class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                                <span>bolalar</span>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                            <div>I13d. Nechta bola maktab-internatda hafta davomida qoladilar va faqat ta&#39;til kunlari uylariga ketadilar?</div>
+                            <div class="flex items-center gap-4">
+                                <input type="text" id="i13d" name="i13d"
+                                       class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                                <span>bolalar</span>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                            <div>I13e. Nechta bola dam olish va ta&#39;til kunlarini ham qo&#39;shgan holda doimiy ravishda maktab-internatda istiqomat qiladi?</div>
+                            <div class="flex items-center gap-4">
+                                <input type="text" id="i13e" name="i13e"
+                                       class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                                <span>bolalar</span>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                            <div>I13f. Maktab-internat hodimlari tomonidan ta&#39;limi olib borilayotgan nechta bola uyadagi ta&#39;limda o&#39;qimoqda?</div>
+                            <div class="flex items-center gap-4">
+                                <input type="text" id="i13f" name="i13f"
+                                       class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                                <span>bolalar</span>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                            <div>I13g. Nechta bola sababidan qat&#39;iy nazar ota-ona qaramogadan mahrum bo&#39;lgan (etim bolalar, tashlab ketilgan bolalar, ota-ona huquqidan mahrum
+                                qilinganlar bolalari)?</div>
+                            <div class="flex items-center gap-4">
+                                <input type="text" id="i13g" name="i13g"
+                                       class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                                <span>bolalar</span>
+                            </div>
+                        </div>
+                    </div>
+                </form>
 
             </form>
 
